<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/buttons_layout_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="@dimen/horizontal_margin"
        android:layout_marginTop="@dimen/top_margin">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCamera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/shape_border"
            android:elevation="@dimen/elevation_2"
            android:drawableStart="@drawable/ic_camera_badge"
            android:gravity="center"
            android:padding="@dimen/general_padding"
            android:layout_marginEnd="@dimen/default_margin"
            android:text="@string/camara"
            android:textColor="@color/black" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/fc_btnGrabar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/shape_border"
            android:elevation="@dimen/elevation_2"
            android:drawableStart="@drawable/ic_galery_badge"
            android:padding="@dimen/general_padding"
            android:text="@string/galeria"
            android:textColor="@color/black" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/imagen"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="@dimen/top_margin"
        android:layout_marginHorizontal="@dimen/horizontal_margin"
        android:background="@drawable/shape_border"
        android:elevation="@dimen/elevation_2"
        android:visibility="visible">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/floting_button_margin"
            android:background="@drawable/shapesquarewhitev2"
            android:src="@drawable/ic_save"
            app:backgroundTint="@color/white"
            app:fabCustomSize="@dimen/floting_button_size"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
            app:layout_constraintTop_toTopOf="@+id/linearLayout2"
            app:maxImageSize="@dimen/floting_button_image_size" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/general_padding"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/ivImage"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.8"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/images_corousel_rv"
                android:layout_width="match_parent"
                android:layout_height="@dimen/r_v_height"
                android:layout_marginTop="@dimen/top_margin"
                android:layout_weight="0.2"
                android:visibility="gone" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/fr_empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible">

            <ImageView
                android:id="@+id/empty_recibos_image"
                android:layout_width="@dimen/no_images_pic_size"
                android:layout_height="@dimen/no_images_pic_size"
                android:layout_gravity="center"
                android:alpha="0.6"
                app:srcCompat="@drawable/ic_pics" />

            <TextView
                android:id="@+id/empty_recibos_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="serif"
                android:text="@string/no_selected_photo"
                android:textSize="@dimen/no_images_text_size"
                android:typeface="serif" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/fc_campos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_margin"
        android:layout_marginHorizontal="@dimen/horizontal_margin"
        android:layout_marginBottom="@dimen/bottom_margin"
        android:background="@drawable/shape_border"
        android:elevation="@dimen/elevation_2"
        android:orientation="vertical"
        android:padding="@dimen/general_padding">

        <LinearLayout
            android:id="@+id/category"
            android:layout_width="match_parent"
            android:layout_height="@dimen/catogorys_box_height"
            android:layout_margin="@dimen/default_margin"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/categoria"
                android:textSize="@dimen/catogory_box_text_size" />

            <Spinner
                android:id="@+id/fc_spinnerCat"
                android:layout_width="match_parent"
                android:layout_height="@dimen/catogory_box_spinner_height"
                android:layout_weight="1"
                android:background="@drawable/shape_border"
                android:ems="10"
                android:padding="@dimen/catogory_box_spinner_padding" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/catogorys_box_height"
            android:layout_margin="@dimen/default_margin"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/observaciones"
                android:textSize="@dimen/catogory_box_text_size" />

            <EditText
                android:id="@+id/txt_observaciones"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/shape_border"
                android:inputType="textPersonName"
                android:padding="@dimen/catogory_box_edit_text_padding" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>